# flutter_liblelantus

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_liblelantus.podspec  lelantus.podspec
ios/Classes/: FlutterLiblelantusPlugin.h  FlutterLiblelantusPlugin.m  LelantusPlugin.h  LelantusPlugin.m  SwiftFlutterLiblelantusPlugin.swift  SwiftLelantusPlugin.swift
lib/: flutter_liblelantus.dart  flutter_liblelantus_method_channel.dart  flutter_liblelantus_platform_interface.dart  lelantus.dart
linux/: CMakeLists.txt  flutter_liblelantus_plugin.cc
linux/include/flutter_liblelantus/: flutter_liblelantus_plugin.h
macos/: flutter_liblelantus.podspec  lelantus.podspec
macos/Classes/: FlutterLiblelantusPlugin.swift  LelantusPlugin.swift
scripts/: build_all.sh  config.sh  copyCMakeLists.sh  linkDistros.sh
scripts/CMakeLists/mobileliblelantus/: Utils.cpp  template_CMakeLists.txt
scripts/android/: build_all.sh  build_openssl.sh  config.sh  copyCMakeLists.sh  download.sh  install_ndk.sh  publish.sh
scripts/android/CMakeLists/mobileliblelantus/: Utils.cpp  Utils.h  dart_interface.cpp
scripts/android/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/android/android_on_mac/: build_openssl.sh  config.sh  copyCMakeLists.sh  copymobile.sh  install_ndk.sh  linkDistros.sh  renamedistros.sh
scripts/crosscompile/: build_all.sh  build_openssl.sh  build_sharedfile.sh  config.sh  prep_sharedfile.sh
scripts/crosscompile/CMakeLists/: Toolchain-cross-mingw32-linux.cmake
scripts/crosscompile/CMakeLists/missingheader/: endian.h
scripts/crosscompile/CMakeLists/mobileliblelantus/: template_CMakeLists.txt
scripts/crosscompile/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/ios/: build_all.sh  build_lib.sh  build_openssl.sh  config.sh  copymobile.sh  download.sh  install_missing_headers.sh  ioscmake.sh  publish.sh
scripts/ios/CMakeLists/mobileliblelantus/: Utils.cpp  Utils.h  dart_interface.cpp  template_CMakeLists.txt
scripts/ios/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/linux/: build_all.sh  build_openssl.sh  build_sharedfile.sh  config.sh  copyCMakeLists.sh  copymobile.sh  download.sh  linkDistros.sh  publish.sh  renamedistros.sh
scripts/linux/CMakeLists/mobileliblelantus/: Utils.cpp  Utils.h  dart_interface.cpp  template_CMakeLists.txt
scripts/linux/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/linux_arm64/: build_sharedfile.sh  renamedistros.sh
scripts/macos/: build_all.sh  build_lib.sh  build_openssl_common.sh  config.sh  gen_version.sh  install_missing_headers.sh  linkDistros.sh
scripts/macos/CMakeLists/mobileliblelantus/: CMakeLists.txt  Utils.cpp  template_CMakeLists.txt
scripts/macos/CMakeLists/secp256k1/: CMakeLists.txt  template_CMakeLists.txt
scripts/mingw64/: build_all.sh  build_openssl.sh  build_sharedfile.sh  config.sh  copyCMakeLists.sh  copymobile.sh  install_missing_headers.sh  linkDistros.sh  prep_sharedfile.sh  winpaths.sh
scripts/mingw64/CMakeLists/missingheader/: endian.h
scripts/mingw64/CMakeLists/mobileliblelantus/: template_CMakeLists.txt
scripts/mingw64/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/mxe/: README.md  build_all.sh  build_openssl.sh  prep_sharedfile.sh
scripts/mxe/CMakeLists/missingheader/: endian.h  features.h
scripts/mxe/CMakeLists/mobileliblelantus/: template_CMakeLists.txt
scripts/mxe/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/windows/: README.md  build_all.ps1  build_all.sh  build_openssl.ps1  build_openssl.sh  build_sharedfile.ps1  build_sharedfile.sh  config.ps1  config.sh  copyCMakeLists.ps1  copymobile.ps1  install_missing_headers.ps1  linkDistros.ps1  mxedeps.sh  prep_openssl.ps1  prep_sharedfile.ps1  prep_sharedfile.sh
scripts/windows-mingw64/: build_all.sh  build_openssl.sh
scripts/windows-mingw64/CMakeLists/mobileliblelantus/: template_CMakeLists.txt
scripts/windows-mingw64/MSYS Makefiles/: build_openssl.sh
scripts/windows-msvc/: prep_sharedfile.ps1
scripts/windows-msvc/CMakeLists/mobileliblelantus/: template_CMakeLists.txt
scripts/windows/CMakeLists/: clang-x86_64_windows_gnu.cmake
scripts/windows/CMakeLists/missingheader/: endian.h  features.h
scripts/windows/CMakeLists/mobileliblelantus/: template_CMakeLists.txt
scripts/windows/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/windows/MSVC/: README.md  build_openssl.ps1  build_sharedfile.ps1  config.ps1  install_missing_headers.ps1
scripts/windows/MSVC/CMakeLists/mobileliblelantus/: CMakeLists.txt  template_CMakeLists.txt
scripts/windows/MSVC/CMakeLists/secp256k1/: CMakeLists.txt  template_CMakeLists.txt
scripts/windows/MSYS Makefiles/: build_sharedfile.sh
scripts/windows/mingw64-on-win/CMakeLists/missingheader/: endian.h
scripts/windows/msvc/: install_missing_headers.ps1
scripts/windows/msvc/CMakeLists/mobileliblelantus/: CMakeLists.txt
scripts/windows/msys2/: build_sharedfile.sh  config.sh  mingw64deps.sh  prep_sharedfile.sh
test/: flutter_liblelantus_method_channel_test.dart  flutter_liblelantus_test.dart  lelantus_test.dart
windows/: CMakeLists.txt  flutter_liblelantus_plugin.cpp
windows/include/flutter_liblelantus/: flutter_liblelantus_plugin.h
(+7 files in other folders)
